# intel8080emu

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  machine.rs  main.rs
src/machine/: flags.rs  interrupt.rs  memory.rs  operator.rs  pin.rs  register.rs  registers.rs  utils.rs
tests/: integration_test.rs  invaders_test.rs
