[package]
name = "intel8080emu"
version = "0.1.0"
authors = ["yukihiratype2 <yukihiratype2@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intel8080disassembler = { git = "https://github.com/yukihiratype2/intel8080disassembler"}